--- a/VR_EmergingTech25/Packages/manifest.json
+++ b/VR_EmergingTech25/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.analytics": "3.8.1",
     "com.unity.collab-proxy": "2.7.1",
     "com.unity.feature.development": "1.0.2",
+    "com.unity.feature.vr": "1.0.1",
     "com.unity.ide.rider": "3.0.31",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.13.1",
@@ -18,10 +19,8 @@
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
     "com.unity.xr.hands": "1.5.0",
-    "com.unity.xr.interaction.toolkit": "3.1.1",
     "com.unity.xr.legacyinputhelpers": "2.1.12",
     "com.unity.xr.management": "4.5.0",
-    "com.unity.xr.openxr": "1.14.1",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
